--- a/litreview.bib
+++ b/litreview.bib
@@ -283,3 +283,32 @@
     year = {2010},
     pages = {50--55}
 }
+
+
+@inproceedings{rao_cloud_2012,
+    title = {Cloud computing for {Internet} of {Things} \& sensing based applications},
+    url = {http://ieeexplore.ieee.org/abstract/document/6461705/},
+    urldate = {2017-01-25},
+    booktitle = {Sensing {Technology} ({ICST}), 2012 {Sixth} {International} {Conference} on},
+    publisher = {IEEE},
+    author = {Rao, BB Prahlada and Saluia, Paval and Sharma, Neetu and Mittal, Ankit and Sharma, Shivay Veer},
+    year = {2012},
+    pages = {374--380},
+}
+
+
+@article{perera_sensing_2014,
+    title = {Sensing as a service model for smart cities supported by {Internet} of {Things}},
+    volume = {25},
+    issn = {21613915},
+    url = {http://doi.wiley.com/10.1002/ett.2704},
+    doi = {10.1002/ett.2704},
+    language = {en},
+    number = {1},
+    urldate = {2017-01-25},
+    journal = {Transactions on Emerging Telecommunications Technologies},
+    author = {Perera, Charith and Zaslavsky, Arkady and Christen, Peter and Georgakopoulos, Dimitrios},
+    month = jan,
+    year = {2014},
+    pages = {81--93},
+}
