--- a/litreview.bib
+++ b/litreview.bib
@@ -312,3 +312,52 @@
     year = {2014},
     pages = {81--93},
 }
+
+
+@inproceedings{alam_senaas_2010,
+    title = {Senaas: {An} event-driven sensor virtualization approach for internet of things cloud},
+    shorttitle = {Senaas},
+    url = {http://ieeexplore.ieee.org/abstract/document/5678060/},
+    urldate = {2017-01-26},
+    booktitle = {Networked {Embedded} {Systems} for {Enterprise} {Applications} ({NESEA}), 2010 {IEEE} {International} {Conference} on},
+    publisher = {IEEE},
+    author = {Alam, Sarfraz and Chowdhury, Mohammad MR and Noll, Josef},
+    year = {2010},
+    pages = {1--6},
+}
+
+@misc{sensorml,
+    title = {SensorML},
+    howpublished = {\url{http://www.opengeospatial.org/standards/sensorml}},
+}
+
+@article{dean_owl_2004,
+    title = {{OWL} web ontology language reference},
+    volume = {10},
+    journal = {W3C Recommendation February},
+    author = {Dean, Mike and Schreiber, Guus and Bechhofer, Sean and van Harmelen, Frank and Hendler, Jim and Horrocks, Ian and McGuinness, Deborah L. and Patel-Schneider, Peter F. and Stein, Lynn Andrea},
+    year = {2004},
+}
+
+
+@inproceedings{gerla_internet_2014,
+    title = {Internet of vehicles: {From} intelligent grid to autonomous cars and vehicular clouds},
+    shorttitle = {Internet of vehicles},
+    url = {http://ieeexplore.ieee.org/abstract/document/6803166/},
+    urldate = {2017-01-26},
+    booktitle = {Internet of {Things} ({WF}-{IoT}), 2014 {IEEE} {World} {Forum} on},
+    publisher = {IEEE},
+    author = {Gerla, Mario and Lee, Eun-Kyu and Pau, Giovanni and Lee, Uichin},
+    year = {2014},
+    pages = {241--246},
+}
+
+@misc{ibm,
+    title = {{IBM}},
+    howpublished = {\url{http://www-01.ibm.com/software/data/bigdata/what-is-big-data.html}},
+}
+
+@misc{uwis,
+    title = {{Data Science} University of Wisconsin},
+    howpublished = {\url{http://datasciencedegree.wisconsin.edu/data-science/what-is-big-data/}},
+}
