--- a/litreview.tex
+++ b/litreview.tex
@@ -35,19 +35,7 @@ The size of sensor networks is quickly growing. BBC Research provides figures th
 
 Sensor networks can benefit from the generally ``unlimited resources'' of the cloud, namely processing, storage, and network resources. We believe that by leveraging cloud computing, distributed persistence models, and distributed analytics, its possible to provide a platform that is able to meet the demands of the increasing distributed sensor market and the increasing volume, velocity, variety, and value of data that comes along with that. 
 
-This review hopes to summarize the current state of the art surrounding distributed sensor networks and the use of cloud computing as a means for big sensor data acquisition and analysis. We will also briefly discuss privacy concerns relating to sensor data in the cloud.
-
-\subsection{Rest of this Review} \label{ssec:rest-of-this-review}
-The rest of this review is formatted as follows: The rest of section \ref{sec:introduction} will review the concepts of big data in relation to sensor networks\ref{ssec:big-sensor-data} and look at some of the applications of distributed sensor networks\ref{ssec:applications-of-distributed-sensor-networks}. Section \ref{sec:cloud-computing} will focus on cloud computing and how its concepts can be utilized to manage distributed sensor data. Section \ref{sec:big-data-persistence-models} will examine the current state of the art distributed persistence models with an emphasis on how NoSQL and distributed persistence models can aid in managing distributed sensor data. Section \ref{sec:big-data-analytics} will examine the current state of big data analytics options in the cloud and how these can be utilized for performing analytics on distributed sensor data.
-
-\subsection{Big Sensor Data} \label{ssec:big-sensor-data}
-Big Data is generally characterized by ``the four Vs''\cite{hashem_rise_2015}, volume, variety, velocity, and value. Volume is the amount of data flowing into a system at any one time. According to IBM\cite{ibm}, ``90\% of the world's data has been created in the past two years'' and the current data volume is 2.7 zettabytes and is expected to double every two years\cite{uwis}.
-
-Sensor data is generally different from Big Data in several ways \cite{chen_big_2014}. One of the most common characteristics of sensor data is the amount of noise in the data. Environmental sensing will always include noise because the data is born analog\cite{pcast}. Often sensor networks provide data in a large variety of unstructured formats with missing, partial, or conflicting meta-data. Sensor data can also contain a large amount of data redundancy from multiple sensors in similar locations. The problem very quickly becomes a needle-in-the-haystack problem or more aptly put, finding the signal in the noise.
-
-Perera et al.\cite{perera_sensing_2014} expect with IoT we could see as many as 1 billion sensors online by the year 2020.
-
-%\subsection{Scientific Data Infrastructure}
+This review hopes to summarize the current state of the art surrounding distributed sensor networks and the use of cloud computing as a means for big sensor data acquisition and analysis. In particular, we will examine Big Data in the context of sensor networks, review cloud computing and service models related to distributed sensing, discuss modern distributed persistence for Big Data, and modern distributed analytics for Big Data all with an emphasis on acquiring and managing Big Sensor Data.
 
 \subsection{Applications of Distributed Sensor Networks} \label{ssec:applications-of-distributed-sensor-networks}
 Zaslaveky et al. \cite{zaslavsky_sensing_2013} cites several examples of distributed sensor networks in-the-wild including: a real-time greenhouse gas detection network deployed across California, real-time structural monitoring such as the St. Anthony Falls Bridge sensor network in Minneapolis, distributed radiation detection in Fukushima, real-time parking space inventory in San Francisco.
@@ -67,6 +55,17 @@ One area that shows a lot of promise for distributed sensor networks with centra
 
 Many times, the sensor nodes in smart grids lack powerful local computation abilities, but generally have network connections and sensing capabilities. This makes the cloud a perfect sink of information for analyzing complex power trends from a large scale distributed sensor network for smart grids\cite{otta_integration_2016}.
 
+\subsection{Rest of this Review} \label{ssec:rest-of-this-review}
+The rest of this review is formatted as follows: We start with an overview of Big Sensor Data\ref{sec:big-sensor-data}. Section \ref{sec:cloud-computing} will focus on cloud computing and how its concepts can be utilized to manage distributed sensor data. Section \ref{sec:big-data-persistence-models} will examine the current state of the art distributed persistence models with an emphasis on how NoSQL and distributed persistence models can aid in managing distributed sensor data. Section \ref{sec:big-data-analytics} will examine the current state of big data analytics options in the cloud and how these can be utilized for performing analytics on distributed sensor data.
+
+\section{Big Sensor Data} \label{sec:big-sensor-data}
+Big Data is generally characterized by ``the four Vs''\cite{hashem_rise_2015}, volume, variety, velocity, and value. Volume is the amount of data flowing into a system at any one time. According to IBM\cite{ibm}, ``90\% of the world's data has been created in the past two years'' and the current data volume is 2.7 zettabytes and is expected to double every two years\cite{uwis}.
+
+Sensor data is generally different from Big Data in several ways \cite{chen_big_2014}. One of the most common characteristics of sensor data is the amount of noise in the data. Environmental sensing will always include noise because the data is born analog\cite{pcast}. Often sensor networks provide data in a large variety of unstructured formats with missing, partial, or conflicting meta-data. Sensor data can also contain a large amount of data redundancy from multiple sensors in similar locations. The problem very quickly becomes a needle-in-the-haystack problem or more aptly put, finding the signal in the noise.
+
+Perera et al.\cite{perera_sensing_2014} expect with IoT we could see as many as 1 billion sensors online by the year 2020.
+
+TODO: this section needs to be expanded, but the definition of cloud computing has been done over and over again to death. This will continue to focus on the challenges associated with data specifically from distributed sensor networks.
 
 \section{Cloud Computing} \label{sec:cloud-computing}
 NIST\cite{mell2011nist} defines cloud computing as ``Cloud computing is a model for enabling ubiquitous, convenient, on-demand network access to a shared pool of configurable computing resources (e.g., networks, servers, storage, applications, and services) that can be rapidly provisioned and released with minimal management effort or service provider interaction''.
@@ -75,7 +74,7 @@ The major five tenants of cloud computing as defined by NIST are as follows:
 
 \textit{On-demand self-service} where the user can provision network, storage, and compute capacity automatically without the need for human intervention. In essence, this becomes a virtual shopping mart where to the consumer it appears that virtually unlimited cloud resources are available to chose from and the user (or algorithm) can increase or decrease the utilization of cloud resources at any time.
 
-\textit{Broad network acess} where computation capabilities are performed over a network and results are delivered to clients such as mobile devices. 
+\textit{Broad network access} where computation capabilities are performed over a network and results are delivered to clients such as mobile devices. 
 
 \textit{Resource pooling} where resources within a cloud such as storage, network, or compute capacity are shared among multiple tenants. This allows for efficient utilization of hardware when generally virtual services are provided to clients. Clients don't necessarily know where their physical hardware is located or provisioned. 
 
@@ -172,6 +171,8 @@ Virtual private clouds as described in Botta et al.\cite{botta_integration_2016}
 
 \subsection{Mobile Cloud Computing} \label{ssec:mobile-cloud-computing}
 Mobile devices such as smartphones make fantastic distributed sensors for temporalspatial data. Not only do they carry a wide array of sensors on-board (microphones, barometers, accelerometers, GPS, compasses, cameras, clocks), but they generally have multiple modes of offloading data (WiFi, bluetooth, cellular, SD cards), and support some pre-processing on-board.
+
+TODO: Expand on this more with an emphasis on the broad range of sensors being used by cellular networks..
 
 \subsection{Issues with Cloud Computing} \label{ssec:issues-with-cloud-computing}
 Being a relatively new research field cloud computing is showing quite a few growing pains. 
